# cmake_tut

./: LICENSE  README.md
1/: CMakeLists.txt  README.md
2/: CMakeLists.txt  README.md  hello.cpp
